--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,9 +183,14 @@ jobs:
       - run:
           name: Get artifacts
           command: |
-            artifacts = $(curl -H GET 'https://circleci.com/api/v2/project/gh/takaheraw/suburi/$CIRCLE_BUILD_NUM/artifacts' -H 'Content-Type:application/json' -H 'Circle-Token: $CIRCLE_API_TOKEN' | jq '.items[].url | select(endswith("index.html"))')
+            echo jq --version
+            artifacts=$(curl -X GET "https://circleci.com/api/v2/project/gh/takaheraw/suburi/$CIRCLE_BUILD_NUM/artifacts" \
+            -H "Content-Type:application/json" \
+            -H "Circle-Token: $CIRCLE_API_TOKEN")
             echo $artifacts
-            echo "export ARTIFACT_RESPONSE=$artifacts" >> $BASH_ENV
+            artifact=$(echo $artifacts | jq '.items[].url | select(endswith("index.html"))') 
+            echo $artifact
+            echo "export ARTIFACT_RESPONSE=$artifact" >> $BASH_ENV
       - slack/notify:
           color: "#42e2f4"
           message: "$ARTIFACT_RESPONSE"
