--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,7 +189,7 @@ jobs:
             artifacts=$(curl -X GET "https://circleci.com/api/v2/project/gh/takaheraw/suburi/902/artifacts" \
             -H "Content-Type: application/json" \
             -H "Circle-Token: ${CIRCLE_API_TOKEN}")
-            echo $artifacts
+            echo "response = $artifacts"
             artifact=$(echo $artifacts | jq '.items[].url | select(endswith("index.html"))') 
             echo $artifact
             echo "export ARTIFACT_RESPONSE=$artifacts" >> $BASH_ENV
