--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,7 +140,7 @@ jobs:
       - store_artifacts:
           path: swagger-ui/dist
   test:
-    parallelism: 1
+    parallelism: 2
     executor:
       name: default
     steps:
@@ -202,8 +202,14 @@ jobs:
             echo "export RUBYCRITIC_URL=$rubycritic_url" >> $BASH_ENV
       - slack/notify:
           color: "#42e2f4"
-          message: "$COVERAGE_URL\n$RUBYCRITIC_URL"
+          message: ":rubycritic: $CIRCLE_PR_USERNAME:$CIRCLE_BRANCH\n$COVERAGE_URL\n$RUBYCRITIC_URL"
           webhook: $SLACK_WEBHOOK
+          include_job_number_field: false
+          include_project_field: false
+          include_visit_job_action: false
+          image_url: "https://raw.githubusercontent.com/whitesmith/rubycritic/master/images/logo.png"
+          title: "タイトル"
+          title_link: "https://circleci.com"
   pr-release:
     executor:
       name: default
