--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,14 +202,14 @@ jobs:
             echo "export RUBYCRITIC_URL=$rubycritic_url" >> $BASH_ENV
       - slack/notify:
           color: "#42e2f4"
-          message: ":rubycritic: $CIRCLE_PR_USERNAME:$CIRCLE_BRANCH\n$COVERAGE_URL\n$RUBYCRITIC_URL"
+          message: ":rubycritic: $CIRCLE_PR_USERNAME : $CIRCLE_BRANCH\n$COVERAGE_URL\n$RUBYCRITIC_URL"
           webhook: $SLACK_WEBHOOK
           include_job_number_field: false
           include_project_field: false
           include_visit_job_action: false
-          image_url: "https://raw.githubusercontent.com/whitesmith/rubycritic/master/images/logo.png"
-          title: "タイトル"
-          title_link: "https://circleci.com"
+          image_url: "https://i.gyazo.com/5c473c428da17776b5afe1a2f865eb67.png"
+          title: ":rubycritic: $CIRCLE_PR_USERNAME : $CIRCLE_BRANCH"
+          title_link: "$CIRCLE_BUILD_URL"
   pr-release:
     executor:
       name: default
