--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -208,7 +208,7 @@ jobs:
           include_project_field: false
           include_visit_job_action: false
           image_url: "https://i.gyazo.com/5c473c428da17776b5afe1a2f865eb67.png"
-          title: ":rubycritic: $CIRCLE_PR_USERNAME : $CIRCLE_BRANCH"
+          title: ":rubycritic: $CIRCLE_PROJECT_REPONAME/$CIRCLE_BRANCH ($CIRCLE_PR_USERNAME)"
           title_link: "$CIRCLE_BUILD_URL"
   pr-release:
     executor:
