--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -1,53 +1,6 @@
 # Set to true to add reviewers to pull requests
 addReviewers: true
+addAssignees: author
 
-# Set to true to add assignees to pull requests
-addAssignees: false
-
-# A number of reviewers added to the pull request
-# Set 0 to add all the reviewers (default: 0)
-numberOfReviewers: 1
-
-# A number of assignees to add to the pull request
-# Set to 0 to add all of the assignees.
-# Uses numberOfReviewers if unset.
-# numberOfAssignees: 2
-# A list of reviewers to be added to pull requests (GitHub user name)
 reviewers:
   - takaheraw
-
-# Set to true to add reviewers from different groups to pull requests
-useReviewGroups: false
-
-# A list of reviewers, split into different groups, to be added to pull requests (GitHub user name)
-#reviewGroups:
-#  backend:
-#    - takaheraw
-#  frontend:
-#    - takaheraw
-
-# Set to true to add assignees from different groups to pull requests
-useAssigneeGroups: false
-
-# A list of assignees, split into different froups, to be added to pull requests (GitHub user name)
-# assigneeGroups:
-#   groupA:
-#     - assigneeA
-#     - assigneeB
-#     - assigneeC
-#   groupB:
-#     - assigneeD
-#     - assigneeE
-#     - assigneeF
-
-# A list of keywords to be skipped the process that add reviewers if pull requests include it
-# skipKeywords:
-#   - wip
-
-filterLabels:
-  # Run
-  include:
-    - dependencies
-  # Not run
-  exclude:
-    - javascript
