--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -11,3 +11,11 @@ reviewGroups:
     - takaheraw
 
 useAssigneeGroups: false
+
+filterLabels:
+  # Run
+  include:
+    - dependencies
+  # Not run
+  exclude:
+    - javascript
