--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -10,3 +10,6 @@ jobs:
       - uses: kentaro-m/auto-assign-action@v1.1.2
         with:
           configuration-path: ".github/auto_assign.yml"
+      - uses: kentaro-m/auto-assign-action@v1.1.2
+        with:
+          configuration-path: ".github/auto_assign2.yml"
