--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -3,7 +3,7 @@ name: "Auto Assign PR Reviewers"
 on:
   pull_request:
     branches:
-      - 'dependabot/hoge'
+      - 'develop'
 
 jobs:
   add-reviews:
