--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ executors:
   default:
     working_directory: ~/app
     docker:
-      - image: cimg/ruby:2.6.6-node
+      - image: cimg/ruby:2.6.6
         environment:
           BUNDLER_VERSION: 2.1.4
           BUNDLE_JOBS: 3
@@ -80,7 +80,7 @@ jobs:
           command: |
             curl -sSL "https://nodejs.org/dist/v10.15.3/node-v10.15.3-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v10.15.3-linux-x64/bin/node
             curl https://www.npmjs.com/install.sh | sudo bash
-      - run: sudo npm install -g npm@6.13.0
+      - run: npm install -g npm@6.13.0
       - run: node -v && npm -v
       # yarn
       - restore_cache:
