--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ executors:
   default:
     working_directory: ~/app
     docker:
-      - image: cimg/ruby:2.6.6
+      - image: cimg/ruby:2.6.6-node
         environment:
           BUNDLER_VERSION: 2.1.4
           BUNDLE_JOBS: 3
