--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,6 +219,7 @@ workflows:
   version: 2
   build_and_test:
     jobs:
+      - build
       - pr-release:
           filters:
             branches:
